# auto-vpn

./: .gitignore  AGENTS.md  DESIGN.md  README.md  capture_screenshots.mjs  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/instructions/: electron-review.instructions.md  python-review.instructions.md  workflows-review.instructions.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  deploy.yml  headless-cli.yml  pr-context.yml  release-electron.yml  release.yml
.superpowers/sdd/: task-2-report.md  task-5-report.md  task-6-report.md  task-7-brief.md  task-7-report.md  task-8-report.md  task-9-report.md
docs/: TODO-2026-04-29-restricted-items.md  TODO-2026-04-29-sub-nodes-deploy-and-worker-alignment.md  deploy-pages-sub-nodes.md  github-automation.md  mobile-ux.md
docs/headless-agent/: README.md  agent-skill.md  headless-cli.md  job-manager.md  linux-delivery.md  linux-headless-guide.md
docs/npm-cli/: docs-agent-plan.md  node-first-command-inventory.md  node-first-contract.md  node-first-event-schema.md  node-first-migration-sop.md  npm-wrapper-sop.md  npm-wrapper-test-sop.md  python-cli-contract-plan.md  release-ci-plan.md  (+1 more)
electron/: ipc.js  main.js  paths.js  preload.cjs  preload.js  window-config.js
scripts/: autovpn.sh  generate-release-notes.mjs  monitor_run.sh  resume_backend_pipeline.sh  resume_speedtest_retry.sh  run_backend_pipeline.sh  run_pytest.sh  start_autovpn.sh
templates/: vmess_node.js
tests/: conftest.py  test_smoke.py
(+308 files in other folders)
