[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-subscription-automation"
version = "1.4.1"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "tomlkit>=0.13.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
vpn-subscription-automation = "vpn_automation.app:main"
autovpn = "vpn_automation.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
